@@ -1,18 +1,15 @@
 package br.com.letscode.starwarsresistancesocialnetwork.reportar;
 
-import br.com.letscode.starwarsresistancesocialnetwork.rebelde.Rebelde;
-import br.com.letscode.starwarsresistancesocialnetwork.rebelde.RebeldeRepository;
 import com.opencsv.CSVReader;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Repository;
 
+import javax.annotation.PostConstruct;
 import java.io.BufferedWriter;
-import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.List;
@@ -20,44 +17,25 @@ import java.util.List;
 @Repository
 public class ReportarRepository {
 
-    private File file;
-    private final RebeldeRepository rebeldeRepository;
+    private final String caminho = "src/main/resources/dados/reportes.csv";
 
-    public ReportarRepository(@Value("${files.reportes}") String fileName, RebeldeRepository rebeldeRepository) {
-        this.rebeldeRepository = rebeldeRepository;
+    private Path path;
+
+    @PostConstruct
+    public void init() {
         try {
-            this.file = new ClassPathResource(fileName).getFile();
-            if (!file.exists()) {
-                Files.createFile(Path.of(file.getPath()));
+            path = Paths.get(caminho);
+            if (!path.toFile().exists()) {
+                Files.createFile(path);
             }
         } catch (IOException ioException) {
             ioException.printStackTrace();
         }
     }
 
-    public String reportarRebelde(Reportar reportar) throws IOException {
-        List<Rebelde> rebeldesList = rebeldeRepository.listAll();
-        if (checarSeJaFoiReportado(reportar)){
-            throw new RebeldeReportadoAnteriormenteException(reportar.getIdTraidor());
-        }
-        findRebelde(reportar, rebeldesList);
-        rebeldeRepository.reescreverArquivo(rebeldesList);
-        inserirArquivo(reportar);
-        return "rebelde reportado.";
-    }
-
-    private void findRebelde(Reportar reportar, List<Rebelde> rebeldesList) {
-        for (Rebelde rebelde : rebeldesList) {
-            if (reportar.getIdTraidor().equals(rebelde.getId())) {
-                rebelde.setQtdReport(rebelde.getQtdReport()+1);
-                if (rebelde.getQtdReport() == 3) {rebelde.setTraitor(true);}
-            }
-        }
-    }
-
     public List<Reportar> listReportes() throws IOException {
         List<Reportar> reportes;
-        try (CSVReader reader = new CSVReader(new FileReader(file))) {
+        try (CSVReader reader = new CSVReader(new FileReader(caminho))) {
             reportes = new ArrayList<>();
             String[] line;
             while ((line = reader.readNext()) != null) {
@@ -68,19 +46,12 @@ public class ReportarRepository {
         return reportes;
     }
 
-    public boolean checarSeJaFoiReportado(Reportar reportar) throws IOException {
-        for (Reportar reporte : listReportes()) {
-            if (reportar.equals(reporte)){return true;}
-        }
-        return false;
-    }
-
     public void inserirArquivo(Reportar reportar) throws IOException {
         write(format(reportar));
     }
 
     private void write(String reportarStr) throws IOException {
-        try (BufferedWriter bf = Files.newBufferedWriter(Path.of(file.getPath()), StandardOpenOption.APPEND)) {
+        try (BufferedWriter bf = Files.newBufferedWriter(path, StandardOpenOption.APPEND)) {
             bf.flush();
             bf.write(reportarStr);
         }
